--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -53,11 +53,11 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
   deploy:
+
     name: Deploy to EKS
-    
-    commands:
-      - kubectl apply -f deploy.yml
-      - echo "Deployment complete"
+    steps:
+    - name: Run command
+      run: kubectl apply -f deploy.yml
 
 artifacts:
   files:
