--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -53,8 +53,8 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
   deploy:
-
     name: Deploy to EKS
+    runs-on: ubuntu-latest
     steps:
     - name: Run command
       run: kubectl apply -f deploy.yml
