prueba con json

--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -52,13 +52,5 @@ jobs:
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-  deploy:
-    name: Deploy to EKS
-    runs-on: ubuntu-latest
-    steps:
-    - name: Run command
-      run: kubectl apply -f deploy.yml
-
-artifacts:
-  files:
-    - deploy.yml
+    - name: Run command to deploy EKS
+      run: echo 'deploy.json' | kubectl apply -f -
