--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -46,23 +46,19 @@ jobs:
 
     - name: Build, tag, and push image to Amazon ECR
       env:
-        ECR_REGISTRY: 346054926618.dkr.ecr.us-east-1.amazonaws.com
-        ECR_REPOSITORY: orders-service-example
-        IMAGE_TAG: orders-service-example
+        ECR_REGISTRY: ${{secrets.ECR_REGISTRY}}
+        ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+        IMAGE_TAG: ${{ github.ref }}
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        
-    - name: Deploy to EKS
-      script:
-          - mkdir $HOME/.kube
-          - cp $KUBECONFIG $HOME/.kube/config
-          - cat $HOME/.kube/config
-          - apk update  && apk add --no-cache curl
-          - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
-          - chmod +x ./kubectl && mv ./kubectl /usr/local/bin/kubectl
-          - kubectl config set-context $(kubectl config current-context)
-          - sed -i 's/orders-service-example/'"orders-service-exanple"'/g; deploy-${{ github.ref }}.yml;
-          - sed -i 's/orders-service-example/'"orders-service-exanple"'/g; public_ip_service.yml;
-          - kubectl apply -f kubernetes/deploy-${{ github.ref }}.yaml
-          - kubectl apply -f kubernetes/public_ip_service.yaml
+
+    - name: Deploy to Cluster
+      uses: kodermax/kubectl-aws-eks@master
+      env:
+        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+        ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
+        ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+        IMAGE_TAG: ${{ github.ref }}
+      with:
+        args: set image deployment/$ECR_REPOSITORY $ECR_REPOSITORY=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
