--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -22,6 +22,11 @@ on:
         required: true
       IMAGE_TAG:
         required: true
+      ECR_REGISTRY:
+        required: true
+      KUBE_CONFIG_DATA:
+        required: true
+        
 
 jobs:
   build:
@@ -46,7 +51,7 @@ jobs:
 
     - name: Build, tag, and push image to Amazon ECR
       env:
-        ECR_REGISTRY: 346054926618.dkr.ecr.us-east-1.amazonaws.com
+        ECR_REGISTRY: ${{secrets.ECR_REGISTRY}}
         ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
         IMAGE_TAG: ${{ github.ref }}
       run: |
@@ -57,7 +62,7 @@ jobs:
       uses: kodermax/kubectl-aws-eks@master
       env:
         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-        ECR_REGISTRY: 346054926618.dkr.ecr.us-east-1.amazonaws.com
+        ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
         ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
         IMAGE_TAG: ${{ github.ref }}
       with:
