--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -51,9 +51,9 @@ jobs:
 
     - name: Build, tag, and push image to Amazon ECR
       env:
-        ECR_REGISTRY: 346054926618.dkr.ecr.us-east-1.amazonaws.com
-        ECR_REPOSITORY: orders-service-example
-        IMAGE_TAG: orders-service-example
+        ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }} #346054926618.dkr.ecr.us-east-1.amazonaws.com
+        ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+        IMAGE_TAG: ${{ secrets.IMAGE_TAG }}
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
@@ -62,8 +62,8 @@ jobs:
     #  uses: kodermax/kubectl-aws-eks@master
     #  env:
     #    KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-    #    ECR_REGISTRY: 346054926618.dkr.ecr.us-east-1.amazonaws.com
-    #    ECR_REPOSITORY: orders-service-example
-    #    IMAGE_TAG: ${{ github.ref }}
+    #    ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }} #346054926618.dkr.ecr.us-east-1.amazonaws.com
+    #    ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+    #    IMAGE_TAG: ${{ secrets.IMAGE_TAG }}
     #  with:
     #    args: set image deployment/$ECR_REPOSITORY $ECR_REPOSITORY=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
