--- a/.github/workflows/workflow-dev.yml
+++ b/.github/workflows/workflow-dev.yml
@@ -26,5 +26,5 @@ jobs:
       AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
       ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
       ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_ORDERS }}
-      IMAGE_TAG: ${{ secrets.IMAGE_TAG_ORDERS }}
+      IMAGE_TAG: ${{ secrets.IMAGE_TAG_ORDERS_DEV }}
       KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
