--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -51,7 +51,6 @@ jobs:
 
     - name: Build, tag, and push image to Amazon ECR
       env:
-        RELEASE_REVISION: "pr-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}"
         ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }} #346054926618.dkr.ecr.us-east-1.amazonaws.com
         ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
         IMAGE_TAG: orders-service-example
@@ -59,13 +58,9 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:orders-service-example .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:orders-service-example
 
-    - name: Deploy to Cluster
-      uses: kodermax/kubectl-aws-eks@master
-      env:
-        RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.RELEASE_REVISION }}
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-        ECR_REGISTRY: 346054926618.dkr.ecr.us-east-1.amazonaws.com
-        ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-        IMAGE_TAG: orders-service-example
-      with:
-        args: set image deployment/my-pod app=${{ env.RELEASE_IMAGE }} --record -n devops
+    - name: Deploy to Kubernetes cluster                                                                            
+        uses: kodermax/kubectl-aws-eks@master                                                                         
+        env:                                                                                                          
+          RELEASE_IMAGE: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        with:
+          args: set image deployment/orders-service-example app=$RELEASE_IMAGE --record -n ${{ github.ref }}
