--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -59,8 +59,4 @@ jobs:
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:orders-service-example
 
     - name: Deploy to Kubernetes cluster                                                                            
-      uses: kodermax/kubectl-aws-eks@master                                                                         
-      env:                                                                                                          
-        RELEASE_IMAGE: 346054926618.dkr.ecr.us-east-1.amazonaws.com/orders-service-example:orders-service-example-dev
-      with:                                                                                                         
-        args: set image deployment/orders-service-example-dev app=${{ env.RELEASE_IMAGE }} --record -n dev
+      run: kubectl apply -f deployment-${{ github.ref }}.yml
