--- a/.github/workflows/deployment-dev.yml
+++ b/.github/workflows/deployment-dev.yml
@@ -1,34 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: service-example-dev-deployment
-  labels:
-    app: orders-service-example-dev
+  name: orders-service-example-dev
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: orders-service-example-dev
+      app: orders-service-example
+      env: dev
   template:
     metadata:
       labels:
-        app: orders-service-example-dev
+        app: orders-service-example
+        env: dev
     spec:
       containers:
-        - name: orders-service-example-dev
-          image: 346054926618.dkr.ecr.us-east-1.amazonaws.com/orders-service-example:orders-service-example-dev
+        - name: contenedor-orders
+          image: 045017788685.dkr.ecr.us-east-1.amazonaws.com/orders-service-example
           ports:
             - containerPort: 8080
-          readinessProbe:
-            tcpSocket:
-              port: 8080
-            initialDelaySeconds: 5
-            periodSeconds: 10
-          livenessProbe:
-            tcpSocket:
-              port: 8080
-            initialDelaySeconds: 30
-            periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
