prueba para ver el kubeconfig

--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -61,5 +61,6 @@ jobs:
     - name: Deploy to Kubernetes cluster                                                                            
       run: |
         kubectl config set-context orders-service-dev --cluster=devops-grupo-8-DEV --user=ramiro --namespace=dev
+        kubectl config view
         kubectl config use-context orders-service-dev
         kubectl apply -f deployment-dev.yml
