--- a/.github/workflows/workflow-dev.yml
+++ b/.github/workflows/workflow-dev.yml
@@ -27,4 +27,4 @@ jobs:
       ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
       ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_ORDERS }}
       IMAGE_TAG: ${{ secrets.IMAGE_TAG_ORDERS_DEV }}
-      KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+      CLUSTER_URL: ${{ secrets.CLUSTER_URL }}
