--- a/.github/workflows/deploy-to-eks.yml
+++ b/.github/workflows/deploy-to-eks.yml
@@ -60,9 +60,8 @@ jobs:
 
     - name: Deploy to Kubernetes cluster                                                                            
       run: |
-        kubectl create deployment orders-service-example --image=$ECR_REGISTRY/$ECR_REPOSITORY:orders-service-example-dev-- /agnhost netexec --port=8080
-        kubectl get deployments
-        kubectl get deployments
-        kubectl expose deployment orders-service-example --type=LoadBalancer --port=8080
+        kubectl create orders-service-example --image=$ECR_REGISTRY/$ECR_REPOSITORY:orders-service-example-dev-- /agnhost netexec --port=8080
+        kubectl get orders-service-example
+        kubectl expose orders-service-example --type=LoadBalancer --port=8080
         kubectl get services
         minikube service orders-service-example
